--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
+    "mongoose": "^8.0.0",
     "ws": "^8.14.2"
   },
   "devDependencies": {
